--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="dist/smooth-scrollbar.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Miljana Nikolic" />
+    <meta property="og:description" content="I am a visual artist from Serbia. I graduated applied painting at the Faculty of Applied arts at The University of Arts in Belgrade, Serbia. I live, work and explore in the Middle East." />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
